--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+## Table of contents
+
+* [Overview](#overview)
+* [Goal](#goal)
+* [User Guide](#user-guide)
+* [Developer Guide](#developer-guide)
+* [Development History](#development-history)
+* [Contact Us](#contact-us)
